[package]
name = "learning_rust"
version = "0.1.0"
authors = ["Apollo <apolloheidal@gmail.com>"]
edition = "2018"
default-run = "hello_world"

[[bin]]
name = "hello_world"
path = "Ch1-HelloWorld/src/main.rs"

[[bin]]
name = "guessing_game"
path = "Ch2-GuessingGame/src/main.rs"

[dependencies]
rand = "0.5.5"
colored = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html